# VirtualWait-Template

./: .gitignore  LICENSE  README.md
.github/workflows/: verify.yml
apps/web/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/web/e2e/: global-setup.ts  global-teardown.ts  mobile.spec.ts  user-and-admin.spec.ts
apps/web/scripts/: backup-db.ts  e2e.mjs  healthcheck.mjs  maintenance.ts  preflight.mjs  reset-db.mjs  verify-backup-db.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  QUEUE_NOTIFY.md  README.md  SECURITY.md  TECHNICAL_SPEC.md  TEMPLATE.md
infra/server/: README.md
infra/server/env/: gateway.production.env.example  gateway.staging.env.example  web.production.env.example  web.staging.env.example
infra/server/nginx/: virtualwait.conf
infra/server/scripts/: verify-nginx-template.mjs  verify-server-env-examples.mjs
infra/server/systemd/: virtualwait-backup.service  virtualwait-backup.timer  (+5 more)
plugins/astrbot_plugin_virtualwait_queue/: README.md  _conf_schema.json  helpers.py  main.py  metadata.yaml  test_helpers.py
scripts/: verify-all.mjs
services/sdgb-gateway/: .env.example  README.md  pyproject.toml
services/sdgb-gateway/src/virtualwait_gateway/: __init__.py  __main__.py  app.py  config.py  contracts.py  provider.py  repository.py  sdgb_preview.py  security.py  service.py
services/sdgb-gateway/tests/: test_config.py  test_contract_fixtures.py  test_http_security.py  test_pending_logout.py  test_provider.py  test_sdgb_preview.py
(+88 files in other folders)
