[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualwait-sdgb-gateway"
version = "0.1.0"
description = "Signed verification-job gateway for VirtualWait"
requires-python = ">=3.11"
dependencies = [
  "pycryptodome>=3.20",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27", "jsonschema>=4.22"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
